Fix page title and add icons

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/mocha-light.svg" media="(prefers-color-scheme: light)" />
+    <link rel="icon" type="image/svg+xml" href="/mocha-dark.svg" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" href="/mocha-light.png" media="(prefers-color-scheme: light)" />
+    <link rel="icon" type="image/png" href="/mocha-dark.png" media="(prefers-color-scheme: dark)" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CompUtil</title>
+    <title>Mocha</title>
   </head>
   <body>
     <div id="root"></div>
